--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "element-ui": "^2.3.4"
+    "element-ui": "^2.3.4",
+    "font-awesome": "^4.7.0"
   }
 }
