--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "element-ui": "^2.3.4",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "vue2-editor": "^2.4.3"
   }
 }
